{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 13,
  "lineage": "c454dfd8-62c7-1e8a-c113-bbffdbdc8a32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:internet-gateway/igw-04ecb2142b18ed29c",
            "id": "igw-04ecb2142b18ed29c",
            "owner_id": "857561174233",
            "tags": {
              "Name": "cust IGW"
            },
            "tags_all": {
              "Name": "cust IGW"
            },
            "vpc_id": "vpc-0f94b39ca5c241155"
          },
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:route-table/rtb-0973725cfa18b4a6b",
            "id": "rtb-0973725cfa18b4a6b",
            "owner_id": "857561174233",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pri rt"
            },
            "tags_all": {
              "Name": "pri rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f94b39ca5c241155"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:route-table/rtb-0830ceb58310f1298",
            "id": "rtb-0830ceb58310f1298",
            "owner_id": "857561174233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ecb2142b18ed29c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub rt"
            },
            "tags_all": {
              "Name": "pub rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f94b39ca5c241155"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bacc0599a223975",
            "route_table_id": "rtb-0973725cfa18b4a6b",
            "subnet_id": "subnet-0fb1f6799168ede06"
          },
          "dependencies": [
            "aws_route_table.pri-rt",
            "aws_subnet.pri_sub",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a2399d7e82d5a75",
            "route_table_id": "rtb-0830ceb58310f1298",
            "subnet_id": "subnet-05dddf4034099d254"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.pub-rt",
            "aws_subnet.pub_sub",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:subnet/subnet-0fb1f6799168ede06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb1f6799168ede06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857561174233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet"
            },
            "tags_all": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-0f94b39ca5c241155"
          },
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:subnet/subnet-05dddf4034099d254",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dddf4034099d254",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857561174233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-0f94b39ca5c241155"
          },
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cust_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:vpc/vpc-0f94b39ca5c241155",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-067924b25db4692d6",
            "default_route_table_id": "rtb-0bbd89f5d4defff77",
            "default_security_group_id": "sg-0a1c60c9f73cfe4b2",
            "dhcp_options_id": "dopt-0d205fe9583644176",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f94b39ca5c241155",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbd89f5d4defff77",
            "owner_id": "857561174233",
            "tags": {
              "Name": "testing_vpc",
              "env": "testing"
            },
            "tags_all": {
              "Name": "testing_vpc",
              "env": "testing"
            }
          }
        }
      ]
    }
  ]
}